[package]
name        = "arise"
version     = "0.1.0"
license     = "MIT"
description = "A RaInmeter (tm) Skin Evolver, a parameterized generator for rainmeter ini-files"
authors     = ["Christian Lunau <Christian.Lunau@gmx.de>"]
              
edition     = "2018"

homepage    = "https://github.com/clunion/arise"
repository  = "https://github.com/clunion/arise"
readme      = "README.md"
keywords    = ["rust", "rust-lang", "rainmeter", "clap", "generator", "tool"]
categories  = ["tools", "desktop", "monitoring"]

# [features]
# optimize = ["log/release_max_level_warn"]
# default = ["optimize"]

[[bin]]
name = "arise"
path = "src/main.rs"

[dependencies]
clap = "2.33.3" 

