[package]
name        = "arise"
version     = "0.1.0"
license     = "MIT"
description = "A RaInmeter (tm) Skin Evolver, a parameterized generator for rainmeter ini-files"
authors     = ["Christian Lunau <Christian.Lunau@gmx.de>"]
              
edition     = "2021"

homepage    = "https://github.com/clunion/arise"
repository  = "https://github.com/clunion/arise"
readme      = "README.md"
keywords    = ["rust", "rust-lang", "rainmeter", "clap", "generator", "tool"]
categories  = ["tools", "desktop", "monitoring"]

[[bin]]
name = "arise"
path = "src/main.rs"

[dependencies]
main_error = "0.1.2"
clap = "2.33.3" 
flexi_logger = { version = "0.19", features = ["compress"]}
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
yansi = "0.5"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]
